Updated loading screen + Team page pfps

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -6,14 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Nightwish Trucking</title>
     <base href="/" />
-    <link href="css/main.min.css?v=0.31" rel="stylesheet" />
+    <link href="css/main.min.css?v=0.32" rel="stylesheet" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css?v=0.31" rel="stylesheet" />
     <link href="Nightwish.MainWebsite.styles.css" rel="stylesheet" />
 </head>
 
 <body>
-    <div id="app">Loading...</div>
+<div id="app">
+    <div class="loading">
+        <img src="/images/logo.png" />
+        <h1>Nightwish Trucking</h1>
+        <p>Site Loading...</p>
+    </div>
+</div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
